# cvrgpt_v2

./: .gitignore  .pre-commit-config.yaml  CHAT_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  HOW_TO_APPLY.txt  Makefile  README-ADDENDUM.md  README.md  ROADMAP.md  STARTUP.md  docker-compose.yaml  docker-compose.yml  ruff.toml  tatus
server/: .dockerignore  .env.example  .env.uat  Dockerfile  README.md  openapi.json  pyproject.toml  requirements.txt  run.ps1  run_server.ps1
server/app/: cache.py  http.py  http_headers.py  logging.py  main.py  metrics.py  middleware.py  security.py  validators.py
server/app/models/: common.py  company.py
server/app/providers/: base.py
server/app/routers/: company.py
server/scripts/: export_openapi.py  generate_openapi.py  smoke.py  test_openai.py
server/src/cvrgpt_api/: api.py  cache.py  config.py  errors.py  http.py  logging.py  logging_setup.py  mcp_server.py  metrics.py  models.py  models_finance.py  observability.py  provider_factory.py  rate_limit.py  redis_client.py  security.py
server/src/cvrgpt_core/: __init__.py  errors.py  models.py
server/tests/: test_accounts.py  test_api.py  test_auth.py  test_cache.py  test_cache_search.py  test_chat_annual_result.py  test_chat_bankruptcy.py  test_company_router.py  test_compare.py  test_coverage_simple.py  test_decimal_serialization.py  test_error_schema.py  test_events.py  test_health.py  test_health_endpoint.py  test_http.py  test_logging.py  test_metrics.py  test_probes.py  test_provider_default.py  test_rate_limit.py  test_search_pagination.py  test_tools.py  test_v1_chat.py
(+96 files in other folders)
